# my-buffer-pool-manager

./: .gitignore  CMakeLists.txt  README.md  testme.sh
assign-temp/: freelist_elru.c  freelist_lru.c
include/: buffer_pool_manager.h  clock_replacer.h  config.h  disk_manager.h  page.h  replacer.h
src/: CMakeLists.txt  buffer_pool_manager.cpp  clock_replacer.cpp  disk_manager.cpp  main.cpp  page.cpp
tests/: CMakeLists.txt  buffer_pool_manager_test.cpp
